--wip-- [skip ci]

--- a/locales/en/default.json
+++ b/locales/en/default.json
@@ -24,7 +24,7 @@
   "awaiting_person": "Person to be added",
   "sort_ascending": "Sort {{label}} ascending",
   "sort_descending": "Sort {{label}} descending",
-  "empty_response": "Nothing provided",
+  "empty_response": "Details not provided",
   "primary_navigation": {
     "home": "Home",
     "outgoing": "Outgoing",
